--- a/smart_brain/client/src/App.css
+++ b/smart_brain/client/src/App.css
@@ -32,3 +32,18 @@
     linear-gradient(90deg,#B71 2%,#fb1 0,#fb1 98%,#B71 0%)0 0 #fb1;
   background-size: 40px 60px;
 }
+
+/* Face_recognition */
+.bounding-box {
+  position: absolute;
+  box-shadow: 0 0 0 3px #149df2 inset;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+    justify-content: center;
+    cursor: pointer;
+}
